--- a/Asterialumi/app/src/main/res/layout/activity_profile.xml
+++ b/Asterialumi/app/src/main/res/layout/activity_profile.xml
@@ -35,17 +35,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Profile is currently empty, add new stuff below :>"
+        android:text="Name: John Vincent B. Balazon"
         android:textSize="12sp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="30dp"
         />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Info"
         android:layout_gravity="center"
-        android:layout_marginTop="90dp"
+        android:text="Age: 20 years old"
+        android:textSize="12sp"
+        android:layout_marginTop="15dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Address: Pakigne, Minglanilla Cebu"
+        android:textSize="12sp"
+        android:layout_marginTop="15dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Course: Computer Science"
+        android:textSize="12sp"
+        android:layout_marginTop="15dp"
         />
 
 </LinearLayout>
